--- a/app/src/main/res/layout/activity_new_task.xml
+++ b/app/src/main/res/layout/activity_new_task.xml
@@ -15,11 +15,18 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/edittext_newtask_title"
         android:hint="@string/newTask_description_hint"/>
+    <TextView
+        android:id="@+id/textview_newtask_duedate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/edittext_newtask_description"
+        android:text="@string/textview_select_date_text"
+        android:layout_marginLeft="5dp"/>
     <Spinner
         android:id="@+id/spinner_newtask_priority"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/edittext_newtask_description"
+        android:layout_below="@id/textview_newtask_duedate"
         android:layout_centerHorizontal="true"/>
     <Button
         android:id="@+id/button_newtask_pickdate"
