--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -34,4 +34,12 @@
         android:layout_below="@id/textview_task_description"
         android:textSize="@dimen/textSize_normal"/>
 
+    <ToggleButton
+        android:id="@+id/togglebutton_task_state"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/textview_task_duedate"
+        android:textOn="@string/togglebutton_on_state_text"
+        android:textOff="@string/togglebutton_off_state_text"/>
+
 </RelativeLayout>
